// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page layout with tabs update should succeed should update page layout with multiple tabs and different widget types 1`] = `
{
  "createdAt": Any<String>,
  "deletedAt": null,
  "id": Any<String>,
  "name": "Multi-Tab Layout",
  "objectMetadataId": null,
  "tabs": [
    {
      "createdAt": Any<String>,
      "deletedAt": null,
      "id": Any<String>,
      "pageLayoutId": Any<String>,
      "position": 0,
      "title": "First Tab",
      "updatedAt": Any<String>,
      "widgets": [
        {
          "configuration": {
            "aggregateFieldMetadataId": Any<String>,
            "aggregateOperation": "COUNT",
            "color": null,
            "configurationType": "PIE_CHART",
            "dateGranularity": "DAY",
            "description": null,
            "displayDataLabel": false,
            "displayLegend": true,
            "filter": null,
            "firstDayOfTheWeek": 1,
            "groupByFieldMetadataId": Any<String>,
            "groupBySubFieldName": null,
            "manualSortOrder": null,
            "orderBy": "VALUE_DESC",
            "showCenterMetric": true,
            "timezone": "UTC",
          },
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 1,
            "row": 0,
            "rowSpan": 1,
          },
          "id": Any<String>,
          "objectMetadataId": null,
          "pageLayoutTabId": Any<String>,
          "title": "Pie Chart Widget",
          "type": "GRAPH",
          "updatedAt": Any<String>,
        },
      ],
    },
    {
      "createdAt": Any<String>,
      "deletedAt": null,
      "id": Any<String>,
      "pageLayoutId": Any<String>,
      "position": 1,
      "title": "Second Tab",
      "updatedAt": Any<String>,
      "widgets": [
        {
          "configuration": {
            "configurationType": "IFRAME",
            "url": "https://example.com",
          },
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 1,
            "row": 0,
            "rowSpan": 1,
          },
          "id": Any<String>,
          "objectMetadataId": null,
          "pageLayoutTabId": Any<String>,
          "title": "Iframe Widget",
          "type": "IFRAME",
          "updatedAt": Any<String>,
        },
      ],
    },
  ],
  "type": "RECORD_PAGE",
  "updatedAt": Any<String>,
}
`;

exports[`Page layout with tabs update should succeed should update page layout with single tab and widget 1`] = `
{
  "createdAt": Any<String>,
  "deletedAt": null,
  "id": Any<String>,
  "name": "Updated Page Layout",
  "objectMetadataId": null,
  "tabs": [
    {
      "createdAt": Any<String>,
      "deletedAt": null,
      "id": Any<String>,
      "pageLayoutId": Any<String>,
      "position": 0,
      "title": "Updated Tab 1",
      "updatedAt": Any<String>,
      "widgets": [
        {
          "configuration": {
            "aggregateFieldMetadataId": Any<String>,
            "aggregateOperation": "COUNT",
            "color": null,
            "configurationType": "PIE_CHART",
            "dateGranularity": "DAY",
            "description": null,
            "displayDataLabel": false,
            "displayLegend": true,
            "filter": null,
            "firstDayOfTheWeek": 1,
            "groupByFieldMetadataId": Any<String>,
            "groupBySubFieldName": null,
            "manualSortOrder": null,
            "orderBy": "VALUE_DESC",
            "showCenterMetric": true,
            "timezone": "UTC",
          },
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 1,
            "row": 0,
            "rowSpan": 1,
          },
          "id": Any<String>,
          "objectMetadataId": null,
          "pageLayoutTabId": Any<String>,
          "title": "Pie Chart Widget",
          "type": "GRAPH",
          "updatedAt": Any<String>,
        },
      ],
    },
  ],
  "type": "RECORD_PAGE",
  "updatedAt": Any<String>,
}
`;
